fixing spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,11 +36,12 @@ body{
     border-top: 1px solid #fafafa;
     border-left: 3px solid #fafafa;
     border-right: 3px solid #fafafa;
+    min-width: 560px;
 
 }
 
 #wrapper{
-	margin-left: 12.5%;
+	margin-left: 8%;
 }
 /* unvisited link */
 a:link {
@@ -64,13 +65,10 @@ a:active {
 
 .patch{
 	width:30%;
+	min-width: 156px;
 	height:50px;
 	float:left;
 	text-align: center;
 	margin-top:20px;
-}
-
-img{
-	margin:100px;
 }
 
